--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,30 @@
+---
 language: python
+sudo: false
+cache:
+  pip: true
+  directories:
+    - eggs
+    - downloads
 python:
-  - 2.6
-  - 2.7
-env:
-  - PLONE_VERSION=4.0
-  - PLONE_VERSION=4.1
-  - PLONE_VERSION=4.2
-  - PLONE_VERSION=4.3 QA=true
+  - "2.7"
 matrix:
-  exclude:
-    - python: 2.7
-      env: PLONE_VERSION=4.0
-    - python: 2.7
-      env: PLONE_VERSION=4.1
-    - python: 2.6
-      env: PLONE_VERSION=4.2
-    - python: 2.6
-      env: PLONE_VERSION=4.3 QA=true
+  fast_finish: true
 install:
-  - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
-  - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg
-  - bin/buildout -c travis.cfg -N -q -t 3
+  - virtualenv -p `which python` .
+  - bin/pip install -r requirements.txt
+  - bin/buildout -N buildout:download-cache=downloads code-analysis:return-status-codes=True annotate
+  - bin/buildout -N buildout:download-cache=downloads code-analysis:return-status-codes=True
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-script: bin/test
-after_success: test -v QA && make python-validation coverage-validation || true
-notifications:
-  irc: irc.freenode.org#simplesconsultoria
+  - firefox -v
+script:
+  - bin/code-analysis
+  - bin/test
+after_success:
+  - bin/createcoverage
+  - bin/pip install coverage
+  - bin/python -m coverage.pickle2json
+  - pip install coveralls
+  - coveralls
